// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPair component creates the right context value - dark theme 1`] = `
<div>
  <div
    class="ColorPair-root-131 ColorPair-black-141"
  >
    <span>
      type: 
      dark
      , theme: 
      black
    </span>
  </div>
</div>
`;

exports[`ColorPair component creates the right context value - light theme 1`] = `
<div>
  <div
    class="ColorPair-root-105 ColorPair-white-106"
  >
    <span>
      type: 
      light
      , theme: 
      white
    </span>
  </div>
</div>
`;

exports[`ColorPair component renders correctly 1`] = `
<div>
  <div
    class="ColorPair-root-1 ColorPair-white-2"
  >
    Lorem ipsum
  </div>
</div>
`;

exports[`ColorPair component renders with a custom component 1`] = `
<div>
  <span
    class="ColorPair-root-79 ColorPair-teal500-95"
  >
    Lorem ipsum
  </span>
</div>
`;

exports[`ColorPair component renders with a custom element 1`] = `
<div>
  <span
    class="ColorPair-root-53 ColorPair-teal500-69"
  >
    Lorem ipsum
  </span>
</div>
`;

exports[`ColorPair component renders with a theme 1`] = `
<div>
  <div
    class="ColorPair-root-27 ColorPair-teal500-43"
  >
    Lorem ipsum
  </div>
</div>
`;
